// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadDump should work: dumped 1`] = `
Object {
  "nodeInfos": Object {
    "_node": Object {
      "id": "_node",
      "raw": Array [
        "[[[ ref ]]] #0 -> bar",
        "[[[ ref ]]] #1 -> baz",
        "[[[ ref ]]] #2 -> foo.1",
        "[[[ ref ]]] #3 -> foo",
      ],
      "referredBy": Array [
        Object {
          "path": Array [
            "replies",
          ],
          "sourceNodeId": "foo",
        },
      ],
      "refs": Array [
        Object {
          "path": Array [
            0,
          ],
          "targetNodeId": "bar",
        },
        Object {
          "path": Array [
            1,
          ],
          "targetNodeId": "baz",
        },
        Object {
          "path": Array [
            2,
          ],
          "targetNodeId": "foo.1",
        },
        Object {
          "path": Array [
            3,
          ],
          "targetNodeId": "foo",
        },
      ],
      "schemaId": "#/Message/replies",
    },
    "bar": Object {
      "id": "bar",
      "raw": Object {
        "id": "bar",
        "text": "Hi",
      },
      "referredBy": Array [
        Object {
          "path": Array [
            0,
          ],
          "sourceNodeId": "_node",
        },
      ],
      "refs": Array [],
      "schemaId": "Message",
    },
    "baz": Object {
      "id": "baz",
      "raw": Object {
        "id": "baz",
        "text": "Bye",
      },
      "referredBy": Array [
        Object {
          "path": Array [
            1,
          ],
          "sourceNodeId": "_node",
        },
      ],
      "refs": Array [],
      "schemaId": "Message",
    },
    "foo": Object {
      "id": "foo",
      "raw": Object {
        "id": "foo",
        "replies": "[[[ ref ]]] #0 -> _node",
        "text": "Hello",
      },
      "referredBy": Array [
        Object {
          "path": Array [
            3,
          ],
          "sourceNodeId": "_node",
        },
      ],
      "refs": Array [
        Object {
          "path": Array [
            "replies",
          ],
          "targetNodeId": "_node",
        },
      ],
      "schemaId": "Message",
    },
    "foo.1": Object {
      "id": "foo.1",
      "raw": Object {
        "id": "foo",
        "text": "Hey?",
      },
      "referredBy": Array [
        Object {
          "path": Array [
            2,
          ],
          "sourceNodeId": "_node",
        },
      ],
      "refs": Array [],
      "schemaId": "Message",
    },
  },
  "schemaIds": Array [
    "Message",
    "#/Message/replies",
  ],
}
`;

exports[`loadDump should work: dumped with writeKey 1`] = `
Object {
  "nodeInfos": Object {
    "_node": Object {
      "id": "_node",
      "raw": Array [
        "[[[ ref ]]] #0 -> bar",
        "[[[ ref ]]] #1 -> baz",
        "[[[ ref ]]] #2 -> foo.1",
        "[[[ ref ]]] #3 -> foo",
      ],
      "referredBy": Array [
        Object {
          "path": Array [
            "replies",
          ],
          "sourceNodeId": "foo",
        },
      ],
      "refs": Array [
        Object {
          "path": Array [
            0,
          ],
          "targetNodeId": "bar",
        },
        Object {
          "path": Array [
            1,
          ],
          "targetNodeId": "baz",
        },
        Object {
          "path": Array [
            2,
          ],
          "targetNodeId": "foo.1",
        },
        Object {
          "path": Array [
            3,
          ],
          "targetNodeId": "foo",
        },
      ],
      "schemaId": "#/Message/replies",
    },
    "bar": Object {
      "id": "bar",
      "raw": Object {
        "id": "bar",
        "text": "Hi",
      },
      "referredBy": Array [
        Object {
          "path": Array [
            0,
          ],
          "sourceNodeId": "_node",
        },
      ],
      "refs": Array [],
      "schemaId": "Message",
    },
    "baz": Object {
      "id": "baz",
      "raw": Object {
        "id": "baz",
        "text": "Bye",
      },
      "referredBy": Array [
        Object {
          "path": Array [
            1,
          ],
          "sourceNodeId": "_node",
        },
      ],
      "refs": Array [],
      "schemaId": "Message",
    },
    "foo": Object {
      "id": "foo",
      "raw": Object {
        "id": "foo",
        "replies": "[[[ ref ]]] #0 -> _node",
        "text": "Hello",
      },
      "referredBy": Array [
        Object {
          "path": Array [
            3,
          ],
          "sourceNodeId": "_node",
        },
      ],
      "refs": Array [
        Object {
          "path": Array [
            "replies",
          ],
          "targetNodeId": "_node",
        },
      ],
      "schemaId": "Message",
    },
    "foo.1": Object {
      "id": "foo.1",
      "raw": Object {
        "id": "foo.1",
        "text": "Hey?",
      },
      "referredBy": Array [
        Object {
          "path": Array [
            2,
          ],
          "sourceNodeId": "_node",
        },
      ],
      "refs": Array [],
      "schemaId": "Message",
    },
  },
  "schemaIds": Array [
    "Message",
    "#/Message/replies",
  ],
}
`;

exports[`loadDump should work: loaded 1`] = `
Object {
  "nodeInfos": Object {
    "_node.2": Object {
      "id": "_node.2",
      "raw": Array [
        "[[[ ref ]]] #0 -> bar.1",
        "[[[ ref ]]] #1 -> baz.1",
        "[[[ ref ]]] #2 -> foo.3",
        "[[[ ref ]]] #3 -> foo.2",
      ],
      "referredBy": Array [
        Object {
          "path": Array [
            "replies",
          ],
          "sourceNodeId": "foo.2",
        },
      ],
      "refs": Array [
        Object {
          "path": Array [
            0,
          ],
          "targetNodeId": "bar.1",
        },
        Object {
          "path": Array [
            1,
          ],
          "targetNodeId": "baz.1",
        },
        Object {
          "path": Array [
            2,
          ],
          "targetNodeId": "foo.3",
        },
        Object {
          "path": Array [
            3,
          ],
          "targetNodeId": "foo.2",
        },
      ],
      "schemaId": "#/Message/replies",
    },
    "bar.1": Object {
      "id": "bar.1",
      "raw": Object {
        "id": "bar",
        "text": "Hi",
      },
      "referredBy": Array [
        Object {
          "path": Array [
            0,
          ],
          "sourceNodeId": "_node.2",
        },
      ],
      "refs": Array [],
      "schemaId": "Message",
    },
    "baz.1": Object {
      "id": "baz.1",
      "raw": Object {
        "id": "baz",
        "text": "Bye",
      },
      "referredBy": Array [
        Object {
          "path": Array [
            1,
          ],
          "sourceNodeId": "_node.2",
        },
      ],
      "refs": Array [],
      "schemaId": "Message",
    },
    "foo.2": Object {
      "id": "foo.2",
      "raw": Object {
        "id": "foo",
        "replies": "[[[ ref ]]] #0 -> _node.2",
        "text": "Hello",
      },
      "referredBy": Array [
        Object {
          "path": Array [
            3,
          ],
          "sourceNodeId": "_node.2",
        },
      ],
      "refs": Array [
        Object {
          "path": Array [
            "replies",
          ],
          "targetNodeId": "_node.2",
        },
      ],
      "schemaId": "Message",
    },
    "foo.3": Object {
      "id": "foo.3",
      "raw": Object {
        "id": "foo.1",
        "text": "Hey?",
      },
      "referredBy": Array [
        Object {
          "path": Array [
            2,
          ],
          "sourceNodeId": "_node.2",
        },
      ],
      "refs": Array [],
      "schemaId": "Message",
    },
  },
  "schemaIds": Array [
    "Message",
    "#/Message/replies",
  ],
}
`;
